# POW_Blockchain

./: README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/node_communication/: MiningProcess.py  Pubsub.py  Pubsub_broadcasters.py  Pubsub_handlers.py  actions.py
blockchain/: constants.py
blockchain/core/: Block.py  Blockchain.py  Transaction.py  TransactionPool.py  Wallet.py
blockchain/scripts/: average_block_rate.py
blockchain/tests/: test_block.py  test_blockchain.py  test_transaction.py  test_utils.py  test_wallet.py
blockchain/utils/: dict_to_bytes.py  generate_wallet_keys.py  hash.py  hex_to_binary.py
